--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
         <figure class="nav__hamburguer nav__hamburguer--close">
           <img src="./assets/images/icon-menu-close.svg" class="nav__icon" />
         </figure>
+
+
+        <ul class="nav__menu">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">New</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Popular</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Trending</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Categories</a>
+          </li>
+        </ul>
+
+        
       </nav>
 
       <!-- main  -->
@@ -115,5 +136,7 @@
         >. Coded by <a href="#">Your Name Here</a>.
       </div> -->
     </div>
+
+
   </body>
 </html>
