--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="./assets/images/icon-menu.svg" class="nav__icon" />
         </figure> -->
 
-        <!-- when clicking the input the checkbox would be checked or unchecked -->
+        <!-- When the user clicks on the input element, the checkbox will be checked or unchecked depending on its current state -->
 
         <label for="check" class="nav__hamburger"><img src="./assets/images/icon-menu.svg" class="nav__icon" /></label>
 
@@ -60,12 +60,15 @@
         <div class="main__bg"></div>
         <article class="main__texts">
           <h1 class="main__title">The Bright Future of Web 3.0?</h1>
-          <p class="main paragraph">
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
-          <a href="#" class="main__cta">Read more</a>
+          <div>
+
+            <p class="main paragraph">
+              We dive into the next evolution of the web that claims to put the
+              power of the platforms back into the hands of the people. But is it
+              really fulfilling its promise?
+            </p>
+            <a href="#" class="main__cta">Read more</a>
+          </div>
         </article>
       </main>
 
