--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
         <div class="main__bg"></div>
         <article class="main__texts">
           <h1 class="main__title">The Bright Future of Web 3.0?</h1>
-          <div>
+          <!-- <div class="main__col2"> -->
 
-            <p class="main paragraph">
+            <p class="main__paragraph">
               We dive into the next evolution of the web that claims to put the
               power of the platforms back into the hands of the people. But is it
               really fulfilling its promise?
             </p>
             <a href="#" class="main__cta">Read more</a>
-          </div>
+          <!-- </div> -->
         </article>
       </main>
 
