--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="main__title">The Bright Future of Web 3.0?</h1>
           <!-- <div class="main__col2"> -->
 
-            <p class="main__paragraph">
+            <p class="mainparagraph">
               We dive into the next evolution of the web that claims to put the
               power of the platforms back into the hands of the people. But is it
               really fulfilling its promise?
