--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <label for="check" class="nav__hamburger"><img src="./assets/images/icon-menu.svg" class="nav__icon" /></label>
 
-        <label for="check" class="nav__hamburger nav__hamburger--close"><img src="./assets/images/icon-menu-close.svg" class="nav__icon" /></label>
+        <label for="check" class="nav__hamburger nav__hamburger--close another__class"><img src="./assets/images/icon-menu-close.svg" class="nav__icon" /></label>
 
 
 <input type="checkbox" class="nav__check" id="check">
